# Adaptar

./: .env  README.md  docker-compose.yml
Backend/app/: __init__.py
Backend/app/views/: __init__.py  auth.py  component.py  tool.py
Frontend/: package-lock.json  package.json
Frontend/src/components/layout/: Header.js
Frontend/src/pages/: _app.js  index.js
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py
backend/app/views/: __init__.py  auth.py  machine.py  parameter.py  product.py  step.py  workflow.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/src/components/: Card.js  Keyb.js
frontend/src/components/layout/: Basic.js  DialogTemplate.js  Header.js  InputKeyboard.js  Step.js
frontend/src/hooks/: useAuth.js
frontend/src/pages/: _document.js  index.js
frontend/src/pages/machine/: index.js
frontend/src/pages/product/: index.js
frontend/src/pages/workflow/[product_name]/: index.js
frontend/src/pages/workflow/[product_name]/[workflow_name]/: index.js
frontend/src/services/: api.js  getAPIClient.js
