[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Victor Hugo Negosek de Oliveira"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
flask-cors = "^3.0.10"
flask-restx = "^1.0.3"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
